syntax = "proto3";
package RegicideProtocol;

enum RequestCode
{
    RequestNone = 0;
    User = 1;//用户
    Room = 2;//房间
    Game = 3;//游戏
    Heart = 4;//心跳
}

enum ActionCode
{
    ActionNone = 0;
    Register = 1;//注册
    Login = 2;//登录
    CreateRoom = 3;//创建房间
    FindRoom = 4;//查找房间
    PlayerList = 5;//玩家列表
    JoinRoom = 6;//加入房间
    Exit = 7;//离开
    Chat = 8;//聊天
    StartGame = 9;//开始游戏
    Starting = 10;//服务端发送来的开始游戏指令
    UpdateState = 11;//更新玩家状态
    ExitGame = 12;//退出游戏
    UpCharacterList = 13;//更新玩家角色列表（移除玩家）
    UpPos = 14;//更新位置
    Fire = 15;//开火
    HeartBeat = 16;//心跳
    AddCharacter = 17;//新增玩家
    RemoveCharacter = 18;//移除玩家
    ATTACK = 19;//移除玩家
    SKILL = 20;//
    DAMAGE = 21;//
    HURT = 22;//
}

enum ReturnCode
{
    ReturnNone = 0;
    Success = 1;//成功
    Fail = 2;//失败
}

enum GAMESTATE
{
    STATE1 = 0;
    STATE2 = 1;
    STATE3 = 2;
    STATE4 = 3;
}

message MainPack
{
    RequestCode requestcode = 1;
    ActionCode actioncode = 2;
    ReturnCode returncode = 3;
    LoginPack loginPack = 4;
    string str = 5;
    repeated RoomPack roompack = 6;//房间包，repeated加上为list
    repeated PlayerPack playerpack = 7;
    string user = 8;
}

message LoginPack
{
    string username = 1;//用户名
    string password = 2;//密码
}

message RoomPack
{
    string roomname = 1;//房间名
    int32 maxnum = 2;//房间最大人数
    int32 curnum = 3;//房间当前人数
    int32 state = 4;//房间状态
    GameStatePack gamestate = 5;
    int32 roomID = 6;//
    int32 currentIndex = 7;//当前几号玩家
    repeated ActorPack actorPack = 8;
    int32 visable = 9;
    int32 usePassword = 10;
    string password = 11;
    ActorPack bossActor = 12;
}

message PlayerPack
{
    string playername = 1;//玩家名称
    string playerID = 2;//玩家ID
    int32 hp = 3;//玩家血量
    PosPack posPack = 4;//位置信息
    int32 playerJob = 5;//玩家职业
}

message GameStatePack
{
    GAMESTATE state = 1;
    int32 BossId  =2;
}

message ActorPack
{
    int32 ActorId = 1;
    int32 CardValueId = 2;
    int32 Hp = 3;
    int32 ATK = 4;
    int32 Index =5;
    int32 ActorJob = 6;
    repeated CardData CuttrntCards = 7;
}

enum CardType
{
    NONE = 0;
    CLUB = 1;   //草花
    DIAMOND = 2;//方块
    HEART =3;  //红心
    SPADE =4;  //黑桃
    JOKER =5;  //
}

message CardData
{
    int32 cardInt = 1;
    int32 cardValue = 2;
    CardType cardType = 3;
}

message PosPack
{
    int32 PosX = 1;
    int32 PosY = 2;
    int32 PosZ = 3;

    int32 RotaX = 4;
    int32 RotaY = 5;
    int32 RotaZ = 6;

    float GunRotZ = 7;

    int32 Animation = 8; 
    int32 Dirt = 9;

    float MoveX = 10;
    float MoveY = 11;
    float MoveZ = 12;
}